src/main/gen/org/intellij/sdk/language/angelscript/parser/AngelScriptParser.java
// This is a generated file. Not intended for manual editing.
package org.intellij.sdk.language.angelscript.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.intellij.sdk.language.angelscript.psi.AngelScriptElementTypes.*;
import static org.intellij.sdk.language.angelscript.parser.AngelScriptParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class AngelScriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return SCRIPT(b, l + 1);
  }

  /* ********************************************************** */
  // '(' ((IDENTIFIER ':')? ASSIGN (',' (IDENTIFIER ':')? ASSIGN)*)? ')'
  public static boolean ARGLIST(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST")) return false;
    if (!nextTokenIs(b, T_LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_LPAREN);
    r = r && ARGLIST_1(b, l + 1);
    r = r && consumeToken(b, T_RPAREN);
    exit_section_(b, m, ARGLIST, r);
    return r;
  }

  // ((IDENTIFIER ':')? ASSIGN (',' (IDENTIFIER ':')? ASSIGN)*)?
  private static boolean ARGLIST_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1")) return false;
    ARGLIST_1_0(b, l + 1);
    return true;
  }

  // (IDENTIFIER ':')? ASSIGN (',' (IDENTIFIER ':')? ASSIGN)*
  private static boolean ARGLIST_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ARGLIST_1_0_0(b, l + 1);
    r = r && ASSIGN(b, l + 1);
    r = r && ARGLIST_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (IDENTIFIER ':')?
  private static boolean ARGLIST_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1_0_0")) return false;
    ARGLIST_1_0_0_0(b, l + 1);
    return true;
  }

  // IDENTIFIER ':'
  private static boolean ARGLIST_1_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = IDENTIFIER(b, l + 1);
    r = r && consumeToken(b, T_COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' (IDENTIFIER ':')? ASSIGN)*
  private static boolean ARGLIST_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ARGLIST_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ARGLIST_1_0_2", c)) break;
    }
    return true;
  }

  // ',' (IDENTIFIER ':')? ASSIGN
  private static boolean ARGLIST_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_COMMA);
    r = r && ARGLIST_1_0_2_0_1(b, l + 1);
    r = r && ASSIGN(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (IDENTIFIER ':')?
  private static boolean ARGLIST_1_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1_0_2_0_1")) return false;
    ARGLIST_1_0_2_0_1_0(b, l + 1);
    return true;
  }

  // IDENTIFIER ':'
  private static boolean ARGLIST_1_0_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGLIST_1_0_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = IDENTIFIER(b, l + 1);
    r = r && consumeToken(b, T_COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CONDITION ( ASSIGNOP ASSIGN )?
  public static boolean ASSIGN(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASSIGN")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN, "<assign>");
    r = CONDITION(b, l + 1);
    r = r && ASSIGN_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ASSIGNOP ASSIGN )?
  private static boolean ASSIGN_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASSIGN_1")) return false;
    ASSIGN_1_0(b, l + 1);
    return true;
  }

  // ASSIGNOP ASSIGN
  private static boolean ASSIGN_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASSIGN_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ASSIGNOP(b, l + 1);
    r = r && ASSIGN(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '=' | '+=' | '-=' | '*=' | '/=' | '|=' | '&=' | '^=' | '%=' | '**=' | '<<=' | '>>=' | '>>>='
  public static boolean ASSIGNOP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ASSIGNOP")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNOP, "<assignop>");
    r = consumeToken(b, T_ASSIGN);
    if (!r) r = consumeToken(b, T_PLUS_ASSIGN);
    if (!r) r = consumeToken(b, T_MINUS_ASSIGN);
    if (!r) r = consumeToken(b, T_MUL_ASSIGN);
    if (!r) r = consumeToken(b, T_QUOTIENT_ASSIGN);
    if (!r) r = consumeToken(b, T_BIT_OR_ASSIGN);
    if (!r) r = consumeToken(b, T_BIT_AND_ASSIGN);
    if (!r) r = consumeToken(b, T_BIT_XOR_ASSIGN);
    if (!r) r = consumeToken(b, T_REMAINDER_ASSIGN);
    if (!r) r = consumeToken(b, T_EXP_ASSIGN);
    if (!r) r = consumeToken(b, T_SHIFT_LEFT_ASSIGN);
    if (!r) r = consumeToken(b, T_SHIFT_RIGHT_ASSIGN);
    if (!r) r = consumeToken(b, T_SHIFT_SHIFT_RIGHT_ASSIN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '&' | '|' | '^' | t_LESS t_LESS t_LESS | t_LESS t_LESS | t_GREATER t_GREATER t_GREATER | t_GREATER t_GREATER
  public static boolean BITOP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BITOP")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BITOP, "<bitop>");
    r = consumeToken(b, T_BIT_AND);
    if (!r) r = consumeToken(b, T_BIT_OR);
    if (!r) r = consumeToken(b, T_BIT_XOR);
    if (!r) r = parseTokens(b, 0, T_LESS, T_LESS, T_LESS);
    if (!r) r = parseTokens(b, 0, T_LESS, T_LESS);
    if (!r) r = parseTokens(b, 0, T_GREATER, T_GREATER, T_GREATER);
    if (!r) r = parseTokens(b, 0, T_GREATER, T_GREATER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // t_bits
  public static boolean BITS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BITS")) return false;
    if (!nextTokenIs(b, T_BITS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_BITS);
    exit_section_(b, m, BITS, r);
    return r;
  }

  /* ********************************************************** */
  // 'break' ';'
  public static boolean BREAK(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BREAK")) return false;
    if (!nextTokenIs(b, T_BREAK)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BREAK, null);
    r = consumeTokens(b, 1, T_BREAK, T_SEMICOLON);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // (('case' EXPR) | 'default') ':' STATEMENT*
  public static boolean CASE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE")) return false;
    if (!nextTokenIs(b, "<case>", T_CASE, T_DEFAULT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE, "<case>");
    r = CASE_0(b, l + 1);
    r = r && consumeToken(b, T_COLON);
    r = r && CASE_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('case' EXPR) | 'default'
  private static boolean CASE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CASE_0_0(b, l + 1);
    if (!r) r = consumeToken(b, T_DEFAULT);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'case' EXPR
  private static boolean CASE_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_CASE);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STATEMENT*
  private static boolean CASE_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!STATEMENT(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CASE_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'cast' '<' TYPE '>' '(' ASSIGN ')'
  public static boolean CAST(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CAST")) return false;
    if (!nextTokenIs(b, T_CAST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CAST, null);
    r = consumeTokens(b, 1, T_CAST, T_LESS);
    p = r; // pin = 1
    r = r && report_error_(b, TYPE(b, l + 1));
    r = p && report_error_(b, consumeTokens(b, -1, T_GREATER, T_LPAREN)) && r;
    r = p && report_error_(b, ASSIGN(b, l + 1)) && r;
    r = p && consumeToken(b, T_RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ('shared' | 'abstract' | 'final' | 'external')* t_class IDENTIFIER (';' | ((':' VARACCESS (',' VARACCESS)*)? '{' (SETTING | VIRTPROP | FUNC | FUNCC | VAR | FUNCDEF | STATEMENT | STRUCT )* '}'))
  public static boolean CLAZZ(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLAZZ, "<clazz>");
    r = CLAZZ_0(b, l + 1);
    r = r && consumeToken(b, T_CLASS);
    p = r; // pin = 2
    r = r && report_error_(b, IDENTIFIER(b, l + 1));
    r = p && CLAZZ_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ('shared' | 'abstract' | 'final' | 'external')*
  private static boolean CLAZZ_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CLAZZ_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CLAZZ_0", c)) break;
    }
    return true;
  }

  // 'shared' | 'abstract' | 'final' | 'external'
  private static boolean CLAZZ_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_0_0")) return false;
    boolean r;
    r = consumeToken(b, T_SHARED);
    if (!r) r = consumeToken(b, T_ABSTRACT);
    if (!r) r = consumeToken(b, T_FINAL);
    if (!r) r = consumeToken(b, T_EXTERNAL);
    return r;
  }

  // ';' | ((':' VARACCESS (',' VARACCESS)*)? '{' (SETTING | VIRTPROP | FUNC | FUNCC | VAR | FUNCDEF | STATEMENT | STRUCT )* '}')
  private static boolean CLAZZ_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_SEMICOLON);
    if (!r) r = CLAZZ_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (':' VARACCESS (',' VARACCESS)*)? '{' (SETTING | VIRTPROP | FUNC | FUNCC | VAR | FUNCDEF | STATEMENT | STRUCT )* '}'
  private static boolean CLAZZ_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CLAZZ_3_1_0(b, l + 1);
    r = r && consumeToken(b, T_LBRACE);
    r = r && CLAZZ_3_1_2(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (':' VARACCESS (',' VARACCESS)*)?
  private static boolean CLAZZ_3_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3_1_0")) return false;
    CLAZZ_3_1_0_0(b, l + 1);
    return true;
  }

  // ':' VARACCESS (',' VARACCESS)*
  private static boolean CLAZZ_3_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_COLON);
    r = r && VARACCESS(b, l + 1);
    r = r && CLAZZ_3_1_0_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' VARACCESS)*
  private static boolean CLAZZ_3_1_0_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3_1_0_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CLAZZ_3_1_0_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CLAZZ_3_1_0_0_2", c)) break;
    }
    return true;
  }

  // ',' VARACCESS
  private static boolean CLAZZ_3_1_0_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3_1_0_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_COMMA);
    r = r && VARACCESS(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (SETTING | VIRTPROP | FUNC | FUNCC | VAR | FUNCDEF | STATEMENT | STRUCT )*
  private static boolean CLAZZ_3_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3_1_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CLAZZ_3_1_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CLAZZ_3_1_2", c)) break;
    }
    return true;
  }

  // SETTING | VIRTPROP | FUNC | FUNCC | VAR | FUNCDEF | STATEMENT | STRUCT
  private static boolean CLAZZ_3_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLAZZ_3_1_2_0")) return false;
    boolean r;
    r = SETTING(b, l + 1);
    if (!r) r = VIRTPROP(b, l + 1);
    if (!r) r = FUNC(b, l + 1);
    if (!r) r = FUNCC(b, l + 1);
    if (!r) r = VAR(b, l + 1);
    if (!r) r = FUNCDEF(b, l + 1);
    if (!r) r = STATEMENT(b, l + 1);
    if (!r) r = STRUCT(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // '==' | '!=' | t_LESS | '<=' | t_GREATER | '>=' | '!' t_IS | t_IS
  public static boolean COMPOP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "COMPOP")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOP, "<compop>");
    r = consumeToken(b, T_EQ);
    if (!r) r = consumeToken(b, T_NOT_EQ);
    if (!r) r = consumeToken(b, T_LESS);
    if (!r) r = consumeToken(b, T_LESS_OR_EQUAL);
    if (!r) r = consumeToken(b, T_GREATER);
    if (!r) r = consumeToken(b, T_GREATER_OR_EQUAL);
    if (!r) r = parseTokens(b, 0, T_NOT, T_IS);
    if (!r) r = consumeToken(b, T_IS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // EXPR ('?' ASSIGN ':' ASSIGN)?
  public static boolean CONDITION(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONDITION")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITION, "<condition>");
    r = EXPR(b, l + 1);
    r = r && CONDITION_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('?' ASSIGN ':' ASSIGN)?
  private static boolean CONDITION_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONDITION_1")) return false;
    CONDITION_1_0(b, l + 1);
    return true;
  }
